# meshx

./: .gitmodules  CMakeLists.txt  meshx.c  meshx.h
cmd/: meshx_cmd_base.c  meshx_cmd_base.h  meshx_cmd_common.c  meshx_cmd_common.h  meshx_cmd_prov.c  meshx_cmd_prov.h
common/: meshx_3gpp_crc.c  meshx_3gpp_crc.h  meshx_assert.c  meshx_assert.h  meshx_bit_field.h  meshx_cmd.c  meshx_cmd.h  meshx_compiler.h  meshx_crc8.c  meshx_crc8.h  meshx_errno.c  meshx_errno.h  meshx_io.c  meshx_io.h  meshx_lib.c  meshx_lib.h  meshx_list.c  meshx_list.h  meshx_macros.h  meshx_queue.c  meshx_queue.h  meshx_trace.c  meshx_trace.h  meshx_trace_module.h  meshx_tty.c  meshx_tty.h  meshx_types.h
doc/: provision.eddx
mesh/: CMakeLists.txt  meshx_config.h
mesh/access/: meshx_access.c
mesh/beacon/: meshx_beacon.c  meshx_beacon.h  meshx_beacon_internal.h
mesh/bearer/: meshx_bearer.c  meshx_bearer_adv.c  meshx_bearer_gatt.c  meshx_bearer_internal.h  meshx_bearer_loopback.c
mesh/common/: meshx_async.c  meshx_async_internal.h  meshx_node.c  meshx_notify.c  meshx_notify_internal.h  meshx_sample_data.c  meshx_sample_data.h
mesh/gap/: meshx_gap.c  meshx_gap.h  meshx_gatt.c  meshx_gatt.h
mesh/inc/: meshx_access.h  meshx_async.h  meshx_beacon.h  meshx_bearer.h  meshx_common.h  meshx_iv_index.h  meshx_key.h  meshx_lower_trans.h  meshx_lower_transport.h  meshx_net.h  meshx_network.h  meshx_nmc.h  meshx_node.h  meshx_notify.h  meshx_prov.h  meshx_provision.h  meshx_provision_callback.h  meshx_proxy.h  meshx_rpl.h  meshx_seq.h  meshx_upper_trans.h  meshx_upper_transport.h
mesh/network/: meshx_net.c  meshx_net_iface.c  meshx_net_internal.h  meshx_network.c  meshx_network_interface.c  meshx_network_internal.h  meshx_nmc.c
mesh/node/: meshx_iv_index.c  meshx_iv_index_internal.h  meshx_key.c  meshx_key.h  meshx_node.c  meshx_node_internal.h  meshx_rpl.c  meshx_seq.c
mesh/provision/: meshx_pb_adv.c  meshx_pb_adv.h  meshx_prov.c  meshx_prov_internal.h  meshx_provision.c  meshx_provision_internal.h
mesh/proxy/: meshx_prov_server.c  meshx_proxy.c  meshx_proxy_internal.h  meshx_proxy_server.c
mesh/security/: meshx_security.c  meshx_security.h
mesh/serialization/: meshx_serialization.c  meshx_serialization.h
mesh/transport/: meshx_lower_trans.c  meshx_lower_transport.c  meshx_trans_internal.h  meshx_transport_internal.h  meshx_upper_trans.c  meshx_upper_transport.c
platform/: meshx_endianness.h  meshx_gap_wrapper.h  meshx_gatt_wrapper.h  meshx_mem.h  meshx_misc.h  meshx_msg_queue.h  meshx_nvm.h  meshx_security_wrapper.h  meshx_system.h  meshx_timer.h  meshx_trace_io.h  meshx_tty.h
platform/linux/: meshx_gap_wrapper_dev.c  meshx_gap_wrapper_prov.c  meshx_gatt_wrapper.c  meshx_mem.c  meshx_misc.c  meshx_msg_queue.c  meshx_nvm.c  meshx_security_wrapper.c  meshx_system.c  meshx_timer.c  meshx_trace_io.c  meshx_tty.c  msg_queue.c  msg_queue.h
tests/: CMakeLists.txt  device_cmd.c  device_cmd.h  meshx_device.c  meshx_provisioner.c  provisioner_cmd.c  provisioner_cmd.h
thirdpart/aes_cmac/: aes_cmac.c  aes_cmac.h
thirdpart/mbedtls/: aes_ccm.c  aes_ccm.h
